--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "valorant-triggerbot"
-version = "1.1.0"
+version = "1.2.0"
 edition = "2021"
 build = "build/main.rs"
 
 [dependencies]
-screenshots = "0.8.5"
+screenshots = "0.8.10"
 device_query = "1.1.3"
-image = "0.24.7"
-open = "5.0.0"
-eframe = "0.22.0"
+image = "0.24.9"
+winit = "0.29"
+eframe = "0.29.1"
 inputbot = "0.6"
 winapi = { version = "0.3.9", features = ["winuser", "windef"] }
 
